# AiriQ

./: .gitignore  README.md
backend/: Cargo.toml  dockerfile  fly.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: WebSocketClient.tsx  feedback.tsx
frontend/components/animata/card/: flip-card.tsx
frontend/hooks/: useWebSocket.ts
